objects/Step_Forward_School_Activity__c.object
<CustomObject>
    <description>Used by Step Forward&apos;s Marketing department to record activities with schools</description>
    <fields>
        <fullName>A_level_exams_date__c</fullName>
        <label>A-level exams: start of period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>A_level_exams_end_of_period__c</fullName>
        <label>A-level exams: end of period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assembly_Date__c</fullName>
        <label>Assembly Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Borough_or_area__c</fullName>
        <description>Formula. Pulls field through from the school&apos;s Account record and converts to text (the original is a picklist)</description>
        <formula>TEXT(School__r.Borough_or_area__c )</formula>
        <inlineHelpText>As shown on the school&apos;s Account record. This field is editable on the school&apos;s Account record.</inlineHelpText>
        <label>Borough or area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <formula>School__r.Cluster__r.Name</formula>
        <label>Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comms_Sent_Date__c</fullName>
        <label>Late Comms Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comms_Sent__c</fullName>
        <label>Late Comms Sent</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flyer</fullName>
                </value>
                <value>
                    <fullName>Poster</fullName>
                </value>
                <value>
                    <fullName>Screen Teaser</fullName>
                </value>
                <value>
                    <fullName>Tutor Email</fullName>
                </value>
                <value>
                    <fullName>PG Email</fullName>
                </value>
                <value>
                    <fullName>Student Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_PG_Intro_Letter_Sent__c</fullName>
        <label>Date PG Intro Letter Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Early_Comms_Sent_Date__c</fullName>
        <label>Early Comms Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Early_Comms_Sent__c</fullName>
        <label>Early Comms Sent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flyer</fullName>
                </value>
                <value>
                    <fullName>Poster</fullName>
                </value>
                <value>
                    <fullName>Screen Teaser</fullName>
                </value>
                <value>
                    <fullName>Tutor Email</fullName>
                </value>
                <value>
                    <fullName>PG Email</fullName>
                </value>
                <value>
                    <fullName>Student Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Early_Recruitment_Assembly_Date__c</fullName>
        <label>Early Recruitment Assembly Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Early_Recruitment_Email_Sent__c</fullName>
        <label>Early Recruitment Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Early_Status_of_School__c</fullName>
        <label>Early Status of School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interest Shown</fullName>
                </value>
                <value>
                    <fullName>Meeting Booked</fullName>
                </value>
                <value>
                    <fullName>Meeting Held</fullName>
                </value>
                <value>
                    <fullName>Assembly Booked</fullName>
                </value>
                <value>
                    <fullName>Assembly Held</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_up_1_event_date__c</fullName>
        <label>Follow up 1 event date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_1_event_description__c</fullName>
        <label>Follow up 1 event description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assembly</fullName>
                </value>
                <value>
                    <fullName>Whole year PSHE/citizenship lesson</fullName>
                </value>
                <value>
                    <fullName>NCS event</fullName>
                </value>
                <value>
                    <fullName>Tutor time</fullName>
                </value>
                <value>
                    <fullName>PSHE/citizenship class</fullName>
                </value>
                <value>
                    <fullName>EOI event</fullName>
                </value>
                <value>
                    <fullName>Piggyback parents&apos; evening</fullName>
                </value>
                <value>
                    <fullName>SF-specific parents&apos; evening</fullName>
                </value>
                <value>
                    <fullName>Careers fair</fullName>
                </value>
                <value>
                    <fullName>College open day</fullName>
                </value>
                <value>
                    <fullName>Freshers&apos; fair</fullName>
                </value>
                <value>
                    <fullName>Networking event</fullName>
                </value>
                <value>
                    <fullName>Teacher conference</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
                <value>
                    <fullName>Small group event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_up_2_event_date__c</fullName>
        <label>Follow up 2 event date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_2_event_description__c</fullName>
        <label>Follow up 2 event description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assembly</fullName>
                </value>
                <value>
                    <fullName>Whole year PSHE/citizenship lesson</fullName>
                </value>
                <value>
                    <fullName>NCS event</fullName>
                </value>
                <value>
                    <fullName>Tutor time</fullName>
                </value>
                <value>
                    <fullName>PSHE/citizenship class</fullName>
                </value>
                <value>
                    <fullName>EOI event</fullName>
                </value>
                <value>
                    <fullName>Piggyback parents&apos; evening</fullName>
                </value>
                <value>
                    <fullName>SF-specific parents&apos; evening</fullName>
                </value>
                <value>
                    <fullName>Careers fair</fullName>
                </value>
                <value>
                    <fullName>College open day</fullName>
                </value>
                <value>
                    <fullName>Freshers&apos; fair</fullName>
                </value>
                <value>
                    <fullName>Networking event</fullName>
                </value>
                <value>
                    <fullName>Teacher conference</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
                <value>
                    <fullName>Small group event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_up_3_event_date__c</fullName>
        <label>Follow up 3 event date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_3_event_description__c</fullName>
        <label>Follow up 3 event description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assembly</fullName>
                </value>
                <value>
                    <fullName>Whole year PSHE/citizenship lesson</fullName>
                </value>
                <value>
                    <fullName>NCS event</fullName>
                </value>
                <value>
                    <fullName>Tutor time</fullName>
                </value>
                <value>
                    <fullName>PSHE/citizenship class</fullName>
                </value>
                <value>
                    <fullName>EOI event</fullName>
                </value>
                <value>
                    <fullName>Piggyback parents&apos; evening</fullName>
                </value>
                <value>
                    <fullName>SF-specific parents&apos; evening</fullName>
                </value>
                <value>
                    <fullName>Careers fair</fullName>
                </value>
                <value>
                    <fullName>College open day</fullName>
                </value>
                <value>
                    <fullName>Freshers&apos; fair</fullName>
                </value>
                <value>
                    <fullName>Networking event</fullName>
                </value>
                <value>
                    <fullName>Teacher conference</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
                <value>
                    <fullName>Small group event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generic_Email_Sent__c</fullName>
        <label>Generic Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Introductory_email_sent_by__c</fullName>
        <label>Introductory email sent by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NCS SC</fullName>
                </value>
                <value>
                    <fullName>Step Forward SC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Introductory_email_sent_to__c</fullName>
        <label>Introductory email sent to (job title)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_a_college__c</fullName>
        <formula>School__r.Is_a_college__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Information from the school&apos;s Account record</inlineHelpText>
        <label>Is a college?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_a_Step_Forward_School__c</fullName>
        <label>Is this a Step Forward School?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013 - 2014</fullName>
                </value>
                <value>
                    <fullName>2014 - 2015</fullName>
                </value>
                <value>
                    <fullName>2015 - 2016</fullName>
                </value>
                <value>
                    <fullName>2016 - 2017</fullName>
                </value>
                <value>
                    <fullName>2017 - 2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_sixth_form_account__c</fullName>
        <formula>School__r.Is_a_sixth_form_account__c</formula>
        <inlineHelpText>Information from the school&apos;s Account record</inlineHelpText>
        <label>Is this a sixth form account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Late_Recruitment_Assembly_Date__c</fullName>
        <label>Late Recruitment Assembly Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late_Recruitment_Email_Sent__c</fullName>
        <label>Late Recruitment Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_arranged_with__c</fullName>
        <label>Meeting arranged with</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mock_A_level_exams_date__c</fullName>
        <label>Mock A-level exams: start of period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mock_A_level_exams_end_of_period__c</fullName>
        <label>Mock A-level exams: end of period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NCS_CT_email__c</fullName>
        <formula>School__r.Champion_Teacher__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCS CT email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_CT_first_name__c</fullName>
        <formula>School__r.Champion_Teacher__r.FirstName</formula>
        <label>NCS CT first name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_CT_gender__c</fullName>
        <formula>TEXT( School__r.Champion_Teacher__r.Gender__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCS CT gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_CT_last_name__c</fullName>
        <formula>School__r.Champion_Teacher__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCS CT last name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_CT_mobile__c</fullName>
        <formula>School__r.Champion_Teacher__r.MobilePhone</formula>
        <label>NCS CT mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_CT_phone__c</fullName>
        <formula>School__r.Champion_Teacher__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCS CT phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_CT_relationship_history__c</fullName>
        <formula>School__r.Champion_Teacher__r.Relationship_History__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCS CT relationship history</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_CT_title__c</fullName>
        <formula>TEXT( School__r.Champion_Teacher__r.Salutation )</formula>
        <label>NCS CT title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_School_owner__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCS school owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_year_13s__c</fullName>
        <label>Number of year 13s</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <description>Master-detail relationship to the school Account that these activities relate to.</description>
        <inlineHelpText>The school that these activities relate to.</inlineHelpText>
        <label>School</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Schools</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Step Forward School Activities</relationshipLabel>
        <relationshipName>Step_Forward_School_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>School_type__c</fullName>
        <description>Formula. Pulls this field through from the school Account record and converts it to text, as the original field is a picklist.</description>
        <formula>TEXT(School__r.School_type__c)</formula>
        <inlineHelpText>As shown on the school&apos;s Account record. This field is editable on the school&apos;s Account record.</inlineHelpText>
        <label>School type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Generic_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provide the capability to send generic emails to SF Schools</description>
        <label>Send Generic Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sixth_form__c</fullName>
        <formula>TEXT(School__r.Sixth_form__c)</formula>
        <inlineHelpText>Information from the school&apos;s Account record</inlineHelpText>
        <label>Sixth form?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sixth_form_proportion__c</fullName>
        <formula>School__r.Sixth_form_proportion__c</formula>
        <label>Sixth form proportion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_of_play_current__c</fullName>
        <description>Users enter the current state of play; via workflow this data is added to the &apos;State of play notes&apos; field and this field is cleared.</description>
        <inlineHelpText>Enter the current state of play</inlineHelpText>
        <label>State of play (current)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_of_play_notes__c</fullName>
        <description>Populated by workflow, using the contents of &apos;State of play (current)&apos; field, plus the date and user alias of the user.</description>
        <inlineHelpText>Stores the history of the &apos;State of play (current)&apos; field, adding the user alias of the person who entered this information and the date on which they did this.</inlineHelpText>
        <label>State of play notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email sent</fullName>
                </value>
                <value>
                    <fullName>Interest shown</fullName>
                </value>
                <value>
                    <fullName>Meeting booked</fullName>
                </value>
                <value>
                    <fullName>Meeting held</fullName>
                </value>
                <value>
                    <fullName>Assembly booked</fullName>
                </value>
                <value>
                    <fullName>Assembly held</fullName>
                </value>
                <value>
                    <fullName>Rejected by School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_School__c</fullName>
        <label>Late Status of School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interest Shown</fullName>
                </value>
                <value>
                    <fullName>Meeting Booked</fullName>
                </value>
                <value>
                    <fullName>Meeting Held</fullName>
                </value>
                <value>
                    <fullName>Assembly Booked</fullName>
                </value>
                <value>
                    <fullName>Assembly Held</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StepFwd_CT_Phone__c</fullName>
        <label>StepFwd CT Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>StepFwd_CT_email__c</fullName>
        <label>StepFwd CT email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>StepFwd_CT_first_name__c</fullName>
        <label>StepFwd CT first name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StepFwd_CT_gender__c</fullName>
        <label>StepFwd CT gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StepFwd_CT_last_name__c</fullName>
        <label>StepFwd CT last name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StepFwd_CT_mobile__c</fullName>
        <label>StepFwd CT mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>StepFwd_CT_notes__c</fullName>
        <label>StepFwd CT notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>StepFwd_CT_title__c</fullName>
        <label>StepFwd CT title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Forward_CT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step Forward CT</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Schools</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Step Forward School Activities</relationshipLabel>
        <relationshipName>Step_Forward_School_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_Forward_CT_details_obtained_date__c</fullName>
        <label>Step Forward CT details obtained date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Step_Forward_SC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Step Forward account owners/name of the SF SC that will be working with the school</description>
        <inlineHelpText>Step Forward account owners/name of the SF SC that will be working with the school</inlineHelpText>
        <label>Step Forward SC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Step_Forward_School_Activities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_Forward_staff_1_attending_meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step Forward staff (1) attending meeting</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Step_Forward_School_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_Forward_staff_2_attending_meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step Forward staff (2) attending meeting</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Step_Forward_School_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>With_Step_Forward_attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>With Step Forward attachment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <formula>School__r.Zone__c</formula>
        <label>Zone</label>
        <type>Text</type>
    </fields>
    <label>Step Forward School Activity</label>
    <listViews>
        <fullName>All_Schools_2015_16</fullName>
        <columns>School__c</columns>
        <columns>NAME</columns>
        <columns>Step_Forward_SC__c</columns>
        <columns>Status__c</columns>
        <columns>Borough_or_area__c</columns>
        <columns>Meeting_Date__c</columns>
        <columns>Assembly_Date__c</columns>
        <columns>Follow_up_1_event_date__c</columns>
        <columns>Follow_up_1_event_description__c</columns>
        <columns>Follow_up_2_event_date__c</columns>
        <columns>Follow_up_2_event_description__c</columns>
        <columns>Follow_up_3_event_date__c</columns>
        <columns>Follow_up_3_event_description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_this_a_Step_Forward_School__c</field>
            <operation>equals</operation>
            <value>2015 - 2016</value>
        </filters>
        <filters>
            <field>Step_Forward_SC__c</field>
            <operation>equals</operation>
            <value>Madiha Bukhari</value>
        </filters>
        <label>MSB School Events 2015 -16</label>
    </listViews>
    <listViews>
        <fullName>BMT_Step_Forward_Schools_2014_15</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Borough_or_area__c</columns>
        <columns>School__c</columns>
        <columns>Is_a_college__c</columns>
        <columns>School_type__c</columns>
        <columns>StepFwd_CT_email__c</columns>
        <columns>StepFwd_CT_first_name__c</columns>
        <columns>StepFwd_CT_last_name__c</columns>
        <columns>Status__c</columns>
        <columns>With_Step_Forward_attachment__c</columns>
        <columns>Is_this_a_Step_Forward_School__c</columns>
        <columns>Step_Forward_SC__c</columns>
        <columns>Introductory_email_sent_to__c</columns>
        <columns>Introductory_email_sent_by__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_this_a_Step_Forward_School__c</field>
            <operation>equals</operation>
            <value>2014 - 2015</value>
        </filters>
        <filters>
            <field>Borough_or_area__c</field>
            <operation>equals</operation>
            <value>Richmond</value>
        </filters>
        <filters>
            <field>Borough_or_area__c</field>
            <operation>contains</operation>
            <value>Wandsworth</value>
        </filters>
        <filters>
            <field>Borough_or_area__c</field>
            <operation>equals</operation>
            <value>City of London</value>
        </filters>
        <filters>
            <field>Borough_or_area__c</field>
            <operation>contains</operation>
            <value>Chelsea</value>
        </filters>
        <label>BMT Step Forward Schools 2014-15</label>
    </listViews>
    <listViews>
        <fullName>BMT_Step_Forward_Schools_2015_16</fullName>
        <booleanFilter>1 and 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Borough_or_area__c</columns>
        <columns>NCS_CT_email__c</columns>
        <columns>School__c</columns>
        <columns>Is_a_college__c</columns>
        <columns>School_type__c</columns>
        <columns>Status__c</columns>
        <columns>Meeting_Date__c</columns>
        <columns>Assembly_Date__c</columns>
        <columns>StepFwd_CT_email__c</columns>
        <columns>StepFwd_CT_first_name__c</columns>
        <columns>StepFwd_CT_last_name__c</columns>
        <columns>With_Step_Forward_attachment__c</columns>
        <columns>Is_this_a_Step_Forward_School__c</columns>
        <columns>Step_Forward_SC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Step_Forward_SC__c</field>
            <operation>equals</operation>
            <value>Ben Thomas</value>
        </filters>
        <filters>
            <field>Is_this_a_Step_Forward_School__c</field>
            <operation>equals</operation>
            <value>2015 - 2016</value>
        </filters>
        <label>BMT Step Forward Schools 2015-16</label>
    </listViews>
    <listViews>
        <fullName>BMT_Step_Forward_Schools_2015_161</fullName>
        <columns>NAME</columns>
        <columns>Borough_or_area__c</columns>
        <columns>Step_Forward_SC__c</columns>
        <columns>Send_Generic_Email__c</columns>
        <columns>Generic_Email_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_this_a_Step_Forward_School__c</field>
            <operation>equals</operation>
            <value>2015 - 2016</value>
        </filters>
        <label>All Step Forward Schools 2015-16</label>
    </listViews>
    <listViews>
        <fullName>BMT_Step_Forward_Schools_2016_17</fullName>
        <booleanFilter>1 and 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Borough_or_area__c</columns>
        <columns>School__c</columns>
        <columns>School_type__c</columns>
        <columns>Status__c</columns>
        <columns>Early_Status_of_School__c</columns>
        <columns>StepFwd_CT_email__c</columns>
        <columns>Early_Recruitment_Email_Sent__c</columns>
        <columns>Assembly_Date__c</columns>
        <columns>Meeting_Date__c</columns>
        <columns>StepFwd_CT_first_name__c</columns>
        <columns>StepFwd_CT_last_name__c</columns>
        <columns>With_Step_Forward_attachment__c</columns>
        <columns>Is_this_a_Step_Forward_School__c</columns>
        <columns>Step_Forward_SC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Step_Forward_SC__c</field>
            <operation>equals</operation>
            <value>Ben Thomas</value>
        </filters>
        <filters>
            <field>Is_this_a_Step_Forward_School__c</field>
            <operation>equals</operation>
            <value>2016 - 2017</value>
        </filters>
        <label>BMT Step Forward Schools 2016-17</label>
    </listViews>
    <listViews>
        <fullName>GGL_Step_Forward_Schools_2014_15</fullName>
        <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6 OR 7 or 8 OR 9)</booleanFilter>
        <columns>NAME</columns>
        <columns>Borough_or_area__c</columns>
        <columns>School__c</columns>
        <columns>StepFwd_CT_email__c</columns>
        <columns>StepFwd_CT_first_name__c</columns>
        <columns>StepFwd_CT_last_name__c</columns>
        <columns>Is_a_college__c</columns>
        <columns>Is_this_a_Step_Forward_School__c</columns>
        <columns>School_type__c</columns>
        <columns>Step_Forward_SC__c</columns>
        <columns>Cluster__c</columns>
        <columns>Assembly_Date__c</columns>
        <columns>Introductory_email_sent_to__c</columns>
        <columns>Meeting_arranged_with__c</columns>
        <columns>StepFwd_CT_Phone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_this_a_Step_Forward_School__c</field>
            <operation>equals</operation>
            <value>2014 - 2015</value>
        </filters>
        <filters>
            <field>Borough_or_area__c</field>
            <operation>equals</operation>
            <value>Greenwich</value>
        </filters>
        <filters>
            <field>Borough_or_area__c</field>
            <operation>equals</operation>
            <value>Tower Hamlets</value>
        </filters>
        <filters>
            <field>Borough_or_area__c</field>
            <operation>equals</operation>
            <value>City of London</value>
        </filters>
        <filters>
            <field>Borough_or_area__c</field>
            <operation>equals</operation>
            <value>Newham</value>
        </filters>
        <filters>
            <field>Borough_or_area__c</field>
            <operation>contains</operation>
            <value>Hammersmith</value>
        </filters>
        <filters>
            <field>Borough_or_area__c</field>
            <operation>contains</operation>
            <value>Wandsworth</value>
        </filters>
        <filters>
            <field>Borough_or_area__c</field>
            <operation>equals</operation>
            <value>Enfield</value>
        </filters>
        <filters>
            <field>Borough_or_area__c</field>
            <operation>contains</operation>
            <value>Chelsea</value>
        </filters>
        <label>GGL Step Forward Schools 2014-15</label>
    </listViews>
    <listViews>
        <fullName>GGL_Step_Forward_Schools_2015_16</fullName>
        <columns>NAME</columns>
        <columns>Borough_or_area__c</columns>
        <columns>School__c</columns>
        <columns>Cluster__c</columns>
        <columns>Is_a_college__c</columns>
        <columns>School_type__c</columns>
        <columns>StepFwd_CT_email__c</columns>
        <columns>StepFwd_CT_first_name__c</columns>
        <columns>StepFwd_CT_last_name__c</columns>
        <columns>Status__c</columns>
        <columns>With_Step_Forward_attachment__c</columns>
        <columns>Is_this_a_Step_Forward_School__c</columns>
        <columns>Step_Forward_SC__c</columns>
        <columns>Introductory_email_sent_to__c</columns>
        <columns>Introductory_email_sent_by__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Step_Forward_SC__c</field>
            <operation>contains</operation>
            <value>Greta</value>
        </filters>
        <label>GGL Step Forward Schools 2015-16</label>
    </listViews>
</CustomObject>